--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "2ch-parser": "^0.0.7",
     "electron-json-storage": "^3.0.5",
     "immutable": "^3.8.1",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "photon": "https://github.com/connors/photon",
     "react": "^15.5.4",
