--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "photonkit": "^0.1.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-emojione": "^3.1.10",
     "superagent": "^3.5.2"
   },
   "devDependencies": {
