--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "2ch-parser": "^0.0.15",
     "electron-json-storage": "^3.0.5",
+    "emoji-regex": "^6.4.2",
     "encoding-japanese": "^1.0.25",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
