--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "./dist/main.js",
   "scripts": {
-    "build": "webpack",
+    "build": "gulp clean && gulp jade && webpack",
     "watch": "webpack -w",
     "start": "electron ./dist/main.js",
     "list": "npm list --depth=0"
