Update npm modules

--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
   "name": "epcviewer",
-  "version": "0.0.1",
+  "version": "1.6.7",
   "main": "./dist/main.js",
   "scripts": {
-    "build": "gulp clean && gulp jade && webpack",
-    "watch": "webpack -w",
-    "start": "electron ./dist/main.js",
+    "build": "gulp clean && gulp jade && webpack --mode=production",
+    "clean": "gulp clean",
+    "watch": "webpack -w --mode=development",
+    "start": "electron ./dist/js/main.js",
     "list": "npm list --depth=0"
   },
   "license": "MIT",
   "dependencies": {
     "2ch-parser": "^0.2.2",
-    "electron-json-storage": "^3.0.5",
-    "electron-store": "^1.2.0",
-    "emoji-regex": "^6.4.2",
+    "electron-json-storage": "^4.1.6",
+    "electron-store": "^3.2.0",
+    "emoji-regex": "^8.0.0",
     "encoding-japanese": "^1.0.25",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "photonkit": "^0.1.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-emojione": "^3.1.10",
-    "superagent": "^3.5.2"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-emojione": "^5.0.1",
+    "superagent": "^5.0.5"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.0",
-    "del": "^2.2.2",
-    "electron-packager": "^8.7.0",
-    "gulp": "^3.9.1",
+    "css-loader": "^2.1.1",
+    "del": "^4.1.1",
+    "electron": "^5.0.2",
+    "electron-packager": "^13.1.1",
+    "gulp": "^4.0.2",
     "gulp-jade": "^1.1.0",
-    "gulp-plumber": "^1.1.0",
-    "node-sass": "^4.5.2",
-    "resolve-url-loader": "^2.0.2",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.4.1",
-    "webpack-notifier": "^1.5.0"
+    "gulp-plumber": "^1.2.1",
+    "node-sass": "^4.12.0",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-notifier": "^1.7.0"
   }
 }
