--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-plumber": "^1.2.1",
     "node-sass": "^4.12.0",
+    "react-color": "^2.17.3",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
