--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "2ch-parser": "^0.6.0",
-    "electron-json-storage": "^4.1.6",
+    "electron-store": "^3.3.0",
     "emoji-regex": "^8.0.0",
     "encoding-japanese": "^1.0.25",
     "lodash": "^4.17.4",
