--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.0",
   "main": "./dist/js/main.js",
   "scripts": {
-    "build": "gulp clean && gulp jade && webpack --mode=production",
+    "build": "gulp clean && gulp pug && webpack --mode=production",
     "clean": "gulp clean",
     "watch": "webpack -w --mode=development",
     "start": "electron ./dist/js/main.js",
@@ -38,8 +38,8 @@
     "electron-packager": "^13.1.1",
     "electron-react-devtools": "^0.5.3",
     "gulp": "^4.0.2",
-    "gulp-jade": "^1.1.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-pug": "^4.0.1",
     "node-sass": "^4.12.0",
     "react-color": "^2.17.3",
     "resolve-url-loader": "^3.1.0",
