--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "gulp": "^4.0.2",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
-    "node-sass": "^4.14.1",
     "resolve-url-loader": "^3.1.0",
+    "sass": "^1.32.12",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^2.0.0",
